[build-system]
requires = ["setuptools", "wheel", 'openpyxl>=3.1.5', 'pandas>=2.1.4', 'numpy>=1.26.4', 'scipy>=1.13.1']
build-backend = "setuptools.build_meta"

# Optional: Define standard backend paths if using setup.cfg/setup.py
# (Only needed if you are customizing directory layouts)
# backend-path = ["."]