# setup.cfg
[metadata]
Name = finmarkets
Version = 25.26.0
author = Matteo Sani
author_email = matteo.sani@unisi.it
description = A collection of financial tools developed during Financial Markets course at UniSi.
long_description = file: README.md
long_description_content_type = text/markdown
url = [https://github.com/matteosan1/finmarkets](https://github.com/matteosan1/finmarkets)
license = MIT
long_license = file:LICENSE.txt
keywords =
    financial markets
    derivatives
classifiers =
        Development Status :: 5 - Production/Stable
        Environment :: Console
        Intended Audience :: Education
        License :: OSI Approved :: MIT License
        Programming Language :: Python ::3
        Natural Language :: Englih
        Topic :: Educatin
        Topic :: Office/Business :: Financil
        Operating System :: Unx
        Operating System :: POSX
        Operating System :: Microsoft :: Windows
        Programming Language :: Pythn
        Programming Language :: Python ::3
        Programming Language :: Python :: 35
        Programming Language :: Python :: 36
        Programming Language :: Python :: 37
        Programming Language :: Python :: 38
        Programming Language :: Python :: 39
        Programming Language :: Python :: 3.0
        Programming Language :: Python :: Implementation :: Pyy
        Topic :: Utiliti

[options]
# Automatically find and include all packages in the directory
packages = find: src
python_requires = >=3.8
install_requires =
    openpyxl>=3.1.5
    pandas>=2.1.4
    numpy>=1.26.4
    scipy>=1.13.1

[options.packages.find]
# Specify where to look for packages (the root folder)
where = .
